<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_nomeProduto"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColorInput"
        android:hint="@string/hint_nomeProduto"
        android:padding="10dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_valor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtValorProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColorInput"
        android:hint="@string/hint_valorProduto"
        android:inputType="numberDecimal"
        android:padding="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_weight="49"
            android:text="@string/text_quantidadeParcelas"
            android:textSize="18sp" />


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="49"
            android:text="@string/text_juros"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtQuantidadeParcelas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="49"
            android:background="@color/backgroundColorInput"
            android:hint="@string/hint_quantidadeParcelas"
            android:inputType="number"
            android:padding="10dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/edtJuros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="49"
            android:background="@color/backgroundColorInput"
            android:hint="@string/hint_juros"
            android:inputType="numberDecimal"
            android:padding="10dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <CheckBox android:id="@+id/checkComEntrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_comEntrada"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/colorBluePrimary"
            android:onClick="calcular"
            android:text="@string/text_calcular" />

        <Button
            android:id="@+id/btnLimparDados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorGreyPrimary"
            android:onClick="limparDados"
            android:text="@string/text_limparDados" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/text_produto"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvNomeProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_valorInicial"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValorInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_valorParcelas"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValorParcelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_valorTotal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValorTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_valorTotalJuros"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValorTotalJuros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>